--- a/Scrambled Net/res/values/strings.xml
+++ b/Scrambled Net/res/values/strings.xml
@@ -10,11 +10,12 @@
 
     <!-- Splash screen / help text. -->
     <string name="splash_text"><b>Scrambled Net</b>\n\nConnect the
-terminals to the server by rotating the tiles.  Select tiles with
-the arrows; press Z, N or 4 to rotate a tile left; M, X or 6 to rotate
-right; tap the screen if your device supports it.  Press space or
-0 to lock a tile when you think it\'s correct.\n\nTiles which 
-are connected are shown highlighted.  Use the menu to
+terminals to the server by rotating the tiles.  Touch a tile to rotate it,
+or select and click with the trackball; press and hold a tile to lock
+it when you think it\'s correct.\n\n
+With a keyboard, you can press Z, N or 4 to rotate a tile left;
+M, X or 6 to rotate right; and press space or 0 to lock.\n\n
+Tiles which are connected are shown highlighted.  Use the menu to
 select different skill levels, pause the game, or start a new
 game.\n\n<b>Tap the screen to start.</b></string>
        
@@ -104,6 +105,6 @@ this layout.</string>
     
     <!-- URLs. -->
     <string name="url_license">http://www.gnu.org/licenses/gpl-2.0.html</string>
-    <string name="url_homepage">http://code.google.com/p/netscramble/</string>
+    <string name="url_homepage">http://code.google.com/p/moonblink/wiki/ScrambledNet</string>
 
 </resources>
