--- a/Audalyzer/res/values/strings.xml
+++ b/Audalyzer/res/values/strings.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Wind Blink</string>
-    <string name="description">Turn your phone into a working tricorder.</string>
+    <string name="app_name">Audalyzer</string>
+    <string name="description">An audio analyzer for your Android phone.</string>
 
-       
-    <string name="eula_title">NOT FOR NAVIGATION</string>
+
+    <string name="eula_title">Not for serious use</string>
     
-    <string name="eula_text">On Watch is intended to be used as a fun
-application to keep you company on night watches.  The information it
-displays (position, astronomical data, etc.) is intended to be interesting,
-but not reliable to the standards required for navigation or any situation
-in which adverse consequences may result from errors.\n\
+    <string name="eula_text">Audalyzer is a toy spectrum analyser for
+your phone.  Since microphone sensitivity varies between individual devices,
+let alone models, it\'s impossible to generate accurate sound level readings
+with this app; so all data should be taken with a pinch of salt.  dB levels
+are relative to the maximum input level of your device.  Still, it may be
+interesting when used to compare sound readings at different locations.\n\
 \n\
 This program is free software, and is distributed by its creator free
 of charge.  A free copy, and the source code, can be obtained on the
@@ -24,18 +25,14 @@ GNU General Public License at http://www.gnu.org/licenses/gpl-2.0.html
 for more details.\n</string>
 
        
-    <string name="help_text"><b>Tricorder</b>\n\
-\n\
-Tricorder displays real data from the sensors built into your device.\n\
+    <string name="help_text">Audalyzer displays your ambient audio
+environment in three forms: as a waveform display, as a frequency spectrum,
+and as a dB meter.\n\
 </string>
 
-       
-    <string name="about_text"><b>Tricorder</b> by Ian Cameron Smith
-(headstay).  Inspired by:\n\
-\n\
-• Jeff Jetton\'s Tricorder for Palm Pilot: http://www.jeffjetton.com/tricorder/\n\
-• Adge's LCARS site: http://www.lcars.org.uk/\n\
-• And, of course, the work of Gene Roddenberry\n\
+
+    <string name="about_text"><b>Audalyzer</b> by Ian Cameron Smith
+(headstay).\n\
 \n\
 For information and source code see the project home page.\n\
 \n\
@@ -78,11 +75,9 @@ for more details.\n</string>
     <string name="button_close">OK</string>
     <string name="button_license">License</string>
     <string name="button_homepage">Project</string>
-    <string name="button_manual">Manual</string>
     
     <!-- URLs. -->
     <string name="url_license">http://www.gnu.org/licenses/gpl-2.0.html</string>
-    <string name="url_homepage">http://code.google.com/p/moonblink/wiki/Tricorder</string>
-    <string name="url_manual">http://code.google.com/p/moonblink/wiki/TricorderUserManual</string>
+    <string name="url_homepage">http://code.google.com/p/moonblink/wiki/Audalyzer</string>
     
 </resources>
