--- a/Audalyzer/res/values/strings.xml
+++ b/Audalyzer/res/values/strings.xml
@@ -56,19 +56,13 @@ for more details.\n</string>
     
     <!-- Preferences strings. -->
     <string name="prefs_title">Settings</string>
-    <string name="prefs_cat_sound">Sound Settings</string>
-    <string name="prefs_sound">Sound level</string>
-    <string name="prefs_sound_summary">Set your desired sound level</string>
-    <string name="prefs_sound_title">Sound Level</string>
-    <string name="prefs_ping">WiFi ping</string>
-    <string name="prefs_ping_summary">Indicate WiFi signals by audible ping</string>
     <string name="prefs_cat_display">Display Settings</string>
     <string name="prefs_orient">Screen orientation</string>
     <string name="prefs_orient_summary">Set your desired screen rotation behaviour</string>
     <string name="prefs_orient_title">Screen Orientation</string>
-    <string name="prefs_cat_data">Data Settings</string>
-    <string name="prefs_fake">Simulate missing</string>
-    <string name="prefs_fake_summary">Use simulated data for missing sensors</string>
+    <string name="prefs_wakelock">Keep device awake</string>
+    <string name="prefs_wakelock_summary_off">The device will sleep normally after the screen times out.</string>
+    <string name="prefs_wakelock_summary_on">The device will stay awake while the app is running.  Warning: battery drain!</string>
         
     <!-- Button strings. -->
     <string name="button_ok">OK</string>
