--- a/Hermit Android/res/values/strings.xml
+++ b/Hermit Android/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, AndroidTest!</string>
-    <string name="app_name">Hermit Android</string>
+    <string name="app_name">Android Test</string>
 </resources>
