--- a/Audalyzer/res/values/strings.xml
+++ b/Audalyzer/res/values/strings.xml
@@ -60,6 +60,9 @@ for more details.\n</string>
     <string name="prefs_sample">Sample rate</string>
     <string name="prefs_sample_summary">Determine the sample rate, and hence frequency range</string>
     <string name="prefs_sample_title">Sample Rate</string>
+    <string name="prefs_block">Block size</string>
+    <string name="prefs_block_summary">Set the input block size -- larger is slower but finer</string>
+    <string name="prefs_block_title">Block Size</string>
     <string name="prefs_decimate">Decimation</string>
     <string name="prefs_decimate_summary">Improve performance by processing only a portion of the input</string>
     <string name="prefs_decimate_title">Decimation</string>
