--- a/Tricorder/res/values/strings.xml
+++ b/Tricorder/res/values/strings.xml
@@ -33,23 +33,26 @@ for more details.\n</string>
     
     <!-- Preferences strings. -->
     <string name="prefs_title">Settings</string>
-    <string name="prefs_cat_sound">Sound Settings</string>
+    <string name="prefs_cat_sound">Sound</string>
     <string name="prefs_sound">Sound level</string>
     <string name="prefs_sound_summary">Set your desired sound level</string>
     <string name="prefs_sound_title">Sound Level</string>
     <string name="prefs_ping">WiFi ping</string>
     <string name="prefs_ping_summary">Indicate WiFi signals by audible ping</string>
-    <string name="prefs_cat_display">Display Settings</string>
+    <string name="prefs_cat_display">Display</string>
     <string name="prefs_orient">Screen orientation</string>
     <string name="prefs_orient_summary">Set your desired screen rotation behaviour</string>
     <string name="prefs_orient_title">Screen Orientation</string>
-    <string name="prefs_cat_data">Data Settings</string>
+    <string name="prefs_cat_data">Data</string>
     <string name="prefs_fake">Simulate missing</string>
     <string name="prefs_fake_summary">Use simulated data for missing sensors</string>
-    <string name="prefs_cat_audio">Audio Analysis Settings</string>
+    <string name="prefs_cat_audio">Audio Analysis</string>
     <string name="prefs_sample">Sample rate</string>
     <string name="prefs_sample_summary">Determine the sample rate, and hence frequency range</string>
     <string name="prefs_sample_title">Sample Rate</string>
+    <string name="prefs_block">Block size</string>
+    <string name="prefs_block_summary">Set the input block size -- larger is slower but finer</string>
+    <string name="prefs_block_title">Block Size</string>
     <string name="prefs_decimate">Decimation</string>
     <string name="prefs_decimate_summary">Improve performance by processing only a portion of the input</string>
     <string name="prefs_decimate_title">Decimation</string>
@@ -126,6 +129,8 @@ for more details.\n</string>
     <string name="msgConnected">Online</string>
 
     <string name="about_title">About</string>
+    
+    <string name="help_title">Tricorder User\'s Manual</string>
     
     <!-- Button strings. -->
     <string name="button_ok">OK</string>
