--- a/Scrambled Net/res/values/strings.xml
+++ b/Scrambled Net/res/values/strings.xml
@@ -18,16 +18,16 @@ M, X or 6 to rotate right; and press space or 0 to lock.\n\n
 Tiles which are connected are shown highlighted.  Use the menu to
 select different skill levels, pause the game, or start a new
 game.\n\n<b>Tap the screen to start.</b></string>
-       
-    <string name="help_text"><b>Scrambled Net</b>\n\nConnect the
-terminals to the server by rotating the tiles.  Touch a tile to rotate it,
-or select and click with the trackball; press and hold a tile to lock
-it when you think it\'s correct.\n\n
-With a keyboard, you can press Z, N or 4 to rotate a tile left;
-M, X or 6 to rotate right; and press space or 0 to lock.\n\n
-Tiles which are connected are shown highlighted.  Use the menu to
-select different skill levels, pause the game, or start a new
-game.\n\n<b>Tap the screen to resume.</b></string>
+             
+    <!-- Help texts for specific skill levels. -->
+    <string name="help_master">At Master level, the board edges wrap around;
+cells on the right edge connect to those on the left edge, and vice
+versa.  Similarly for the top and bottom edges.</string>
+
+    <string name="help_insane">At Insane level, the board edges wrap around;
+cells on the right edge connect to those on the left edge, and vice
+versa.  Similarly for the top and bottom edges.  But in addition, in
+cells with 3 or 4 connections, the wiring is invisible.  Good luck!</string>
        
     <string name="about_text"><b>Scrambled Net</b> based on KNetwalk by
 Andi Peredri, Thomas Nagy, and Reinhold Kainhofer.  Includes MTRandom
@@ -46,18 +46,10 @@ but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License at http://www.gnu.org/licenses/gpl-2.0.html
 for more details.\n</string>
-
-      
-    <!-- Help texts for specific skill levels. -->
-    <string name="help_master">At Master level, the board edges wrap around;
-cells on the right edge connect to those on the left edge, and vice
-versa.  Similarly for the top and bottom edges.</string>
-
-    <string name="help_insane">At Insane level, the board edges wrap around;
-cells on the right edge connect to those on the left edge, and vice
-versa.  Similarly for the top and bottom edges.  But in addition, in
-cells with 3 or 4 connections, the wiring is invisible.  Good luck!</string>
-
+            
+    <!-- Help strings. -->
+    <string name="help_title">Scrambled Net User\'s Manual</string>
+        
 
     <!-- Text displayed in pause mode. -->
     <string name="pause_text">\n\n<b>Game Paused</b>\n\n\n\n<b>Tap
