--- a/Scrambled Net Lite/res/values/strings.xml
+++ b/Scrambled Net Lite/res/values/strings.xml
@@ -3,7 +3,7 @@
 <resources>
 
     <!-- App title. -->
-    <string name="title">Scrambled Net</string>
+    <string name="title">Scrambled Net Lite</string>
     
     <string name="description">A computer networking puzzle game.</string>
 
@@ -49,11 +49,12 @@ for more details.\n</string>
     <string name="help_title">Scrambled Net User\'s Manual</string>
         
 
-    <!-- Scores list strings. -->
-    <string name="scores_title">Personal Bests</string>
-    <string name="scores_skill">Skill Level</string>
-    <string name="scores_clicks">Best Clicks</string>
-    <string name="scores_time">Best Time</string>
+    <!-- Upgrade strings. -->
+    <string name="upgrade_prompt">The Full version of Scrambled Net provides
+personal best tracking and some other nice features.  Would you like to
+look at the upgrade in the Android Market?</string>
+    <string name="upgrade_now">Show me!</string>
+    <string name="upgrade_later">Maybe later</string>
         
 
     <!-- Text displayed in pause mode. -->
