--- a/Scrambled Net Full/res/values/strings.xml
+++ b/Scrambled Net Full/res/values/strings.xml
@@ -52,8 +52,9 @@ for more details.\n</string>
     <!-- Scores list strings. -->
     <string name="scores_title">Personal Bests</string>
     <string name="scores_skill">Skill Level</string>
-    <string name="scores_clicks">Best Clicks</string>
-    <string name="scores_time">Best Time</string>
+    <string name="scores_clicks">Clicks</string>
+    <string name="scores_time">Time</string>
+    <string name="scores_when">When</string>
         
 
     <!-- Text displayed in pause mode. -->
